--- a/src/app/admin/book-register/book-register.component.scss
+++ b/src/app/admin/book-register/book-register.component.scss
@@ -2,6 +2,50 @@
 @import "primeng/resources/primeng.min.css";
 @import "primeicons/primeicons.css";
 
+
+header {
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  background-color: #333;
+  padding: 10px 0;
+  height:70px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
+nav ul li {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-right: 20px;
+  border-bottom: 2px solid #ccc;
+  padding: 10px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+
+}
+
+nav ul li a:hover {
+  color: #ccc;
+}
+
+.active {
+  font-weight: bold;
+}
+
 body, main {
   width: 100%;
 }
