--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register-container">
-  <h2>Formulário de Cadastro</h2>
+  <h2>Formulário de Cadastro (Admin)</h2>
   <form [formGroup]="registerForm" (ngSubmit)="registerUser()" class="register-form">
 
     <div class="form-field">
