--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -37,6 +37,6 @@
       <button pButton type="button" icon="pi pi-minus" (click)="decrementQuantity()"></button>
     </div>
 
-    <p-button label="Adicionar ao Carrinho"></p-button>
+    <p-button label="Adicionar ao Carrinho" (click)="addToCart(book)"></p-button>
   </div>
 </div>
