Implementação Carrinho e Item
- a lógica de criação do carrinho parece correta
- falta adicionar o livro ao ItemCarrinho
- pesquisar o que exatamente é o arquivo em config (WebConfig)

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -37,6 +37,6 @@
       <button pButton type="button" icon="pi pi-minus" (click)="decrementQuantity()"></button>
     </div>
 
-    <p-button label="Adicionar ao Carrinho" (click)="addToCart(book)"></p-button>
+    <p-button label="Adicionar ao Carrinho" (click)="addToCart(book.titulo)"></p-button>
   </div>
 </div>
