--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="register-container">
   <h2>Formulário de Cadastro (Admin)</h2>
-  <form [formGroup]="registerForm" (ngSubmit)="registerUser()" class="register-form">
+  <form [formGroup]="registerForm" class="register-form">
 
     <div class="form-field">
       <div class="label-input">
@@ -44,7 +44,8 @@
       </div>
     </div>
 
-    <p-button label="Cadastrar" [raised]="true" type="submit"></p-button>
+    <p-button label="Cadastrar" [raised]="true" type="submit" (click)="registerUser()"></p-button>
+    <p-button label="Editar" [raised]="true" type="submit"></p-button>
 
   </form>
 </div>
