--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,9 +1,9 @@
 <header>
   <nav>
     <ul>
-      <li><a routerLink="/usuario/home" >Home</a></li>
-      <li><a routerLink="/usuario/carrinho">Carrinho</a></li>
-      <li><a routerLink="/usuario/pedidos">Pedido</a></li>
+      <li><a routerLink="/usuario/home" routerLinkActive="active">Home</a></li>
+      <li><a routerLink="/usuario/carrinho" routerLinkActive="active">Carrinho</a></li>
+      <li><a routerLink="/usuario/pedidos" routerLinkActive="active">Pedido</a></li>
     </ul>
   </nav>
 </header>
